--- a/MvcApplication/Content/Site.css
+++ b/MvcApplication/Content/Site.css
@@ -1,5 +1,6 @@
 ﻿/*----------------------------------------------------------
 The base color for this template is #5c87b2. If you'd like
+to use a different color start by replacing all instances of
 #5c87b2 with your new color.
 ----------------------------------------------------------*/
 body
@@ -111,6 +112,7 @@ page width. Or, you can specify an exact pixel width. */
 #main
 {
     padding: 30px 30px 15px 30px;
+    background-color: #fff;
     margin-bottom: 30px;
     _height: 1px; /* only IE6 applies CSS properties starting with an underscore */
 }
